Fixed loading bug, causing photos to slightly shift up when loading compnent was rendered

--- a/src/Loading/styles/loading.module.scss
+++ b/src/Loading/styles/loading.module.scss
@@ -10,8 +10,9 @@
 }
 
 .loadingContainer {
-	width: 100vw;
-	height: 20vh;
+	width: 100%;
+	height: 100px;
+	margin-top: 80px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
